--- a/web/CSSProjeto/StyleSger.css
+++ b/web/CSSProjeto/StyleSger.css
@@ -26,6 +26,38 @@
     text-align: left;
 }
 
+.tiporelt{
+    margin-bottom: 1%;
+    width:100%;
+    float:left;
+}
+
+.nameinput{
+    font-size: 14px
+}
+
+.divcolumn{  
+}
+
+.divcombo{  
+    width:100%;
+    height:1000px;
+}
+
+.divbar{ 
+    width:100%;
+    height:1000px;
+}
+
+.divpie{ 
+    width:100%;
+    height:1000px;
+}
+
+.hidediv{
+    display: none;   
+}
+
 #nametable{
     font-size: 32px;
     color: #337ab7;    
@@ -43,4 +75,10 @@
     height:600px;
     float:left;
     display: inline;
+}
+
+#radiotela{
+    float: bottom; 
+    width: 400px; 
+    margin: 0 auto;
 }
